# SpriteStitcherv4

./: .gitignore  CMakeLists.txt  README.md  TESTING.md
.claude/skills/run-spritestitcherv4/: SKILL.md  driver.sh
app/: CMakeLists.txt  main.cpp  resources.qrc  spritestitcher.desktop.in
core/: CMakeLists.txt
core/include/ss/core/color/: ColorDistance.h  Lab.h
core/include/ss/core/dmc/: DmcColor.h  DmcMatcher.h  DmcTable.h
core/include/ss/core/image/: BackgroundDetector.h  ImageLoader.h
core/include/ss/core/pattern/: PatternCell.h  PatternModel.h  SymbolAssigner.h
core/include/ss/core/pdf/: ChartPageLayout.h  PdfExporter.h
core/include/ss/core/project/: ProjectSerializer.h
core/include/ss/core/quantize/: ColorReducer.h
core/include/ss/core/undo/: PatternCommands.h
core/src/color/: ColorDistance.cpp  Lab.cpp
core/src/dmc/: DmcMatcher.cpp  DmcTable.cpp  DmcTableData.cpp
core/src/image/: BackgroundDetector.cpp  ImageLoader.cpp
core/src/pattern/: PatternModel.cpp  SymbolAssigner.cpp
core/src/pdf/: ChartPageLayout.cpp  HpdfDocument.cpp  HpdfDocument.h  PdfExporter.cpp
core/src/project/: ProjectSerializer.cpp
core/src/quantize/: ColorReducer.cpp
core/src/undo/: PatternCommands.cpp
core/tests/: CMakeLists.txt  background_detector_test.cpp  color_reduce_test.cpp  dmc_match_test.cpp  pattern_model_test.cpp  pdf_export_test.cpp  project_serializer_test.cpp  undo_test.cpp
tools/dmc_gen/: generate_dmc_table.py
ui/: CMakeLists.txt  GridView.cpp  GridView.h  MainWindow.cpp  MainWindow.h  SpritePreviewPanel.cpp  SpritePreviewPanel.h  ToolPanel.cpp  ToolPanel.h
ui/dialogs/: ImportOptionsDialog.cpp  ImportOptionsDialog.h
